apollo-router/tests/snapshots/set_context__set_context_dependent_fetch_failure_rust_qp.snap
---
source: apollo-router/tests/set_context.rs
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "Some error",
      "locations": [
        {
          "line": 3,
          "column": 5
        }
      ],
      "path": [
        "t",
        "u"
      ],
      "extensions": {
        "service": "Subgraph1"
      }
    },
    {
      "message": "Missing field",
      "path": [
        "t"
      ],
      "extensions": {
        "code": "RESPONSE_VALIDATION_FAILED"
      }
    }
  ],
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "authorization": {
                "is_authenticated": false,
                "policies": [],
                "scopes": []
              },
              "contextRewrites": null,
              "id": null,
              "inputRewrites": null,
              "kind": "Fetch",
              "operation": "query Query_fetch_dependent_failure__Subgraph1__0 { t { id u { __typename id } prop } }",
              "operationKind": "query",
              "operationName": "Query_fetch_dependent_failure__Subgraph1__0",
              "outputRewrites": null,
              "schemaAwareHash": "fd37c5ac106fe5b4953d25aa0ebc97f58db25eed852fb5fa52554c0bc228e938",
              "serviceName": "Subgraph1",
              "variableUsages": []
            },
            {
              "kind": "Flatten",
              "node": {
                "authorization": {
                  "is_authenticated": false,
                  "policies": [],
                  "scopes": []
                },
                "contextRewrites": [
                  {
                    "kind": "KeyRenamer",
                    "path": [
                      "..",
                      "... on T",
                      "prop"
                    ],
                    "renameKeyTo": "contextualArgument_1_0"
                  }
                ],
                "id": null,
                "inputRewrites": null,
                "kind": "Fetch",
                "operation": "query Query_fetch_dependent_failure__Subgraph1__1($representations: [_Any!]!, $contextualArgument_1_0: String) { _entities(representations: $representations) { ... on U { field(a: $contextualArgument_1_0) } } }",
                "operationKind": "query",
                "operationName": "Query_fetch_dependent_failure__Subgraph1__1",
                "outputRewrites": null,
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ],
                    "typeCondition": "U"
                  }
                ],
                "schemaAwareHash": "46bcc4b6e3b688a77a8d7cb9edfbfe721511eefccc0f63824824c92db98b3772",
                "serviceName": "Subgraph1",
                "variableUsages": [
                  "contextualArgument_1_0"
                ]
              },
              "path": [
                "t",
                "u"
              ]
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        t {\n          id\n          u {\n            __typename\n            id\n          }\n          prop\n        }\n      }\n    },\n    Flatten(path: \"t.u\") {\n      Fetch(service: \"Subgraph1\") {\n        {\n          ... on U {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on U {\n            field(a: $contextualArgument_1_0)\n          }\n        }\n      },\n    },\n  },\n}"
    },
    "valueCompletion": [
      {
        "message": "Cannot return null for non-nullable type T",
        "path": []
      }
    ]
  }
}
