apollo-router/tests/snapshots/set_context__set_context_no_typenames_rust_qp.snap
---
source: apollo-router/tests/set_context.rs
expression: response
---
{
  "data": {
    "t": {
      "id": "1",
      "u": {
        "field": 1234
      }
    }
  },
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "authorization": {
                "is_authenticated": false,
                "policies": [],
                "scopes": []
              },
              "contextRewrites": null,
              "id": null,
              "inputRewrites": null,
              "kind": "Fetch",
              "operation": "query set_context_no_typenames_rust_qp__Subgraph1__0 { t { id u { __typename id } prop } }",
              "operationKind": "query",
              "operationName": "set_context_no_typenames_rust_qp__Subgraph1__0",
              "outputRewrites": null,
              "schemaAwareHash": "1c043fa49a8e4d5e91595e9b90dcba0cce73adc457e9a2acb847c66a0e5ff176",
              "serviceName": "Subgraph1",
              "variableUsages": []
            },
            {
              "kind": "Flatten",
              "node": {
                "authorization": {
                  "is_authenticated": false,
                  "policies": [],
                  "scopes": []
                },
                "contextRewrites": [
                  {
                    "kind": "KeyRenamer",
                    "path": [
                      "..",
                      "... on T",
                      "prop"
                    ],
                    "renameKeyTo": "contextualArgument_1_0"
                  }
                ],
                "id": null,
                "inputRewrites": null,
                "kind": "Fetch",
                "operation": "query set_context_no_typenames_rust_qp__Subgraph1__1($representations: [_Any!]!, $contextualArgument_1_0: String) { _entities(representations: $representations) { ... on U { field(a: $contextualArgument_1_0) } } }",
                "operationKind": "query",
                "operationName": "set_context_no_typenames_rust_qp__Subgraph1__1",
                "outputRewrites": null,
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ],
                    "typeCondition": "U"
                  }
                ],
                "schemaAwareHash": "f9fecb2fea3bc9a7356a837aaf86b5629db9085e1429bc6b5e243f9104e4463f",
                "serviceName": "Subgraph1",
                "variableUsages": [
                  "contextualArgument_1_0"
                ]
              },
              "path": [
                "t",
                "u"
              ]
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        t {\n          id\n          u {\n            __typename\n            id\n          }\n          prop\n        }\n      }\n    },\n    Flatten(path: \"t.u\") {\n      Fetch(service: \"Subgraph1\") {\n        {\n          ... on U {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on U {\n            field(a: $contextualArgument_1_0)\n          }\n        }\n      },\n    },\n  },\n}"
    }
  }
}
