apollo-router/tests/snapshots/set_context__set_context_type_mismatch_rust_qp.snap
---
source: apollo-router/tests/set_context.rs
expression: response
---
{
  "data": {
    "t": {
      "id": "1",
      "u": {
        "field": 1234
      }
    }
  },
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "authorization": {
                "is_authenticated": false,
                "policies": [],
                "scopes": []
              },
              "contextRewrites": null,
              "id": null,
              "inputRewrites": null,
              "kind": "Fetch",
              "operation": "query Query_type_mismatch__Subgraph1__0 { t { id u { __typename id } prop } }",
              "operationKind": "query",
              "operationName": "Query_type_mismatch__Subgraph1__0",
              "outputRewrites": null,
              "schemaAwareHash": "ff5a84c6d26acbe82e5503aebcad8c7a8aaf9348583bdd1b198d729e15557a99",
              "serviceName": "Subgraph1",
              "variableUsages": []
            },
            {
              "kind": "Flatten",
              "node": {
                "authorization": {
                  "is_authenticated": false,
                  "policies": [],
                  "scopes": []
                },
                "contextRewrites": [
                  {
                    "kind": "KeyRenamer",
                    "path": [
                      "..",
                      "... on T",
                      "prop"
                    ],
                    "renameKeyTo": "contextualArgument_1_0"
                  }
                ],
                "id": null,
                "inputRewrites": null,
                "kind": "Fetch",
                "operation": "query Query_type_mismatch__Subgraph1__1($representations: [_Any!]!, $contextualArgument_1_0: String) { _entities(representations: $representations) { ... on U { field(a: $contextualArgument_1_0) } } }",
                "operationKind": "query",
                "operationName": "Query_type_mismatch__Subgraph1__1",
                "outputRewrites": null,
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ],
                    "typeCondition": "U"
                  }
                ],
                "schemaAwareHash": "866668f3ecccb2bd685d821ff32aab4ccc0bc6d48494922f047b3f580dc043c6",
                "serviceName": "Subgraph1",
                "variableUsages": [
                  "contextualArgument_1_0"
                ]
              },
              "path": [
                "t",
                "u"
              ]
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        t {\n          id\n          u {\n            __typename\n            id\n          }\n          prop\n        }\n      }\n    },\n    Flatten(path: \"t.u\") {\n      Fetch(service: \"Subgraph1\") {\n        {\n          ... on U {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on U {\n            field(a: $contextualArgument_1_0)\n          }\n        }\n      },\n    },\n  },\n}"
    }
  }
}
